--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
 	color: #ffffff;
   border-top:1px solid white;
   border-bottom: 1px solid blue;
+	border-radius: 20px;
   background-image:linear-gradient(lightblue, #0050f5 );
 }
 
