--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ body {
   font-family: Verdana, Arial, Helvetica, sans-serif;
   margin-top: 5%;
 	margin-left: 13%;
-	margin-right:13%
+	margin-right:13%;
+	margin-bottom:10%;
 }
 
 .info-block{
